[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentilluminator"
version = "0.1.0"
description = "Workflow-level observability for autonomous agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Terence Ma" }]
keywords = [
    "agents", "observability", "tracing", "workflow",
    "ai-agents", "audit", "llm", "autonomous-agents"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
cron = ["croniter>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "croniter>=2.0",
    "PyYAML>=6.0",
]

[project.scripts]
illuminator = "agentilluminator.cli.main:main"

[project.urls]
Homepage = "https://github.com/terence-ma/agent-illuminator"
Repository = "https://github.com/terence-ma/agent-illuminator"
Issues = "https://github.com/terence-ma/agent-illuminator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentilluminator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
